--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="./capa-1.jpg" alt="">
+        
+    </header>
 </body>
 </html>
