--- a/index.html
+++ b/index.html
@@ -4,11 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./estilo.css">
 </head>
 <body>
-    <header>
+    <header class="cabecalho">
         <img src="./capa-1.jpg" alt="">
+    </header class ="cabecalho">
+    <section>
+        <p>O futebol é o esporte mais popular do mundo e suas origens remontam há 5 mil anos na China. O futebol moderno surgiu na Inglaterra durante o século XIX. O futebol é considerado o esporte coletivo mais popular do mundo. O futebol é o esporte coletivo mais popular do planeta.</p>
         
+
+    </ul
+
+
+
+
+
     </header>
+    <section>
+    <h2>
+    </h2>
+    <P></P>
+    <p></p>
+    <img src="
+
+    "alt=>"">
+
+
+    </section>
 </body>
 </html>
