--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
      <section class="secao2">
           <div class="secao2-todo-tripulantes">
             <div class="tripulantes">
-                <img src="" alt="">
+                <img src="./" alt="">
+                <h3>Nome do jogador </h3>
+            </div>
+            <div class="tripulantes">
+                <img src="./" alt="">
+                <h3>Nome do jogador </h3>
             </div>
           </div>
     </section>
