--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h2> class="secao1-titulo">sobre futebol</h2>
           <p class="">O futebol é o esporte mais popular do mundo e suas origens remontam há 5 mil anos na China. O futebol moderno surgiu na Inglaterra durante o século XIX. O futebol é considerado o esporte coletivo mais popular do mundo. O futebol é o esporte coletivo mais popular do planeta.</p>
         </div>
-        <img class="secao1-imagem" src="./imagens (1) 1.png"
+        <img class="secao1-imagem" src="./imagens (1) 1.png">
     </section>
      
      
@@ -30,8 +30,32 @@
                 <h3>Nome do jogador </h3>
             </div>
             <div class="tripulantes">
+                <img src="./roe_ 1.png" alt="">
+                <h3>RONALDINHO </h3>
+            </div>
+            <div class="tripulantes">
+                <img src="./download (3) 1.png" alt="">
+                <h3> CR7 </h3>
+            </div>
+            <div class="tripulantes">
                 <img src="./" alt="">
-                <h3>Nome do jogador </h3>
+                <h3>Nome do jogador </h3> 
+            </div>
+            <div class="tripulantes">
+                <img src="./" alt="">
+                <h3>Nome do jogador </h3> 
+            </div>
+            <div class="tripulantes">
+                <img src="./" alt="">
+                <h3>Nome do jogador </h3> 
+            </div>
+            <div class="tripulantes">
+                <img src="./" alt="">
+                <h3>Nome do jogador </h3> 
+            </div>
+            <div class="tripulantes">
+                <img src="./" alt="">
+                <h3>Nome do jogador </h3> 
             </div>
           </div>
     </section>
