--- a/index.html
+++ b/index.html
@@ -27,35 +27,35 @@
           <div class="secao2-todo-tripulantes">
             <div class="tripulantes">
                 <img src="./" alt="">
-                <h3>Nome do jogador </h3>
-            </div>
-            <div class="tripulantes">
-                <img src="./roe_ 1.png" alt="">
                 <h3>RONALDINHO </h3>
             </div>
             <div class="tripulantes">
+                <img src="./roe_ 1.png" alt="">
+                <h3>CR7 </h3>
+            </div>
+            <div class="tripulantes">
                 <img src="./download (3) 1.png" alt="">
-                <h3> CR7 </h3>
+                <h3> MESSI </h3>
             </div>
             <div class="tripulantes">
                 <img src="./" alt="">
-                <h3>Nome do jogador </h3> 
+                <h3>RONALDO</h3> 
             </div>
             <div class="tripulantes">
                 <img src="./" alt="">
-                <h3>Nome do jogador </h3> 
+                <h3>NEYMAR </h3> 
             </div>
             <div class="tripulantes">
                 <img src="./" alt="">
-                <h3>Nome do jogador </h3> 
+                <h3>ZIDANE </h3> 
             </div>
             <div class="tripulantes">
                 <img src="./" alt="">
-                <h3>Nome do jogador </h3> 
+                <h3>VINE JR </h3> 
             </div>
             <div class="tripulantes">
                 <img src="./" alt="">
-                <h3>Nome do jogador </h3> 
+                <h3>ROMARINHO </h3> 
             </div>
           </div>
     </section>
