--- a/index.html
+++ b/index.html
@@ -26,34 +26,54 @@
      <section class="secao2">
           <div class="secao2-todo-tripulantes">
             <div class="tripulantes">
+                <img src="./roe_ 1.png" alt="">
+                <h3>Nome do jogador </h3>
+=======
                 <img src="./" alt="">
                 <h3>RONALDINHO </h3>
             </div>
             <div class="tripulantes">
+          <img src="./download (3) 1.png" alt="">
+                <h3>RONALDINHO </h3>
                 <img src="./roe_ 1.png" alt="">
                 <h3>CR7 </h3>
+
             </div>
             <div class="tripulantes">
+                <img src="./messi-ergue-a-taca-da-copa-do-mundo-1671393136267_v2_300x300 1.png" alt="">
+                <h3> CR7 </h3>
+
                 <img src="./download (3) 1.png" alt="">
                 <h3> MESSI </h3>
             </div>
             <div class="tripulantes">
+
+                <img src="./yy 1 (1).png" alt="">
+                <h3>Nome do jogador </h3> 
                 <img src="./" alt="">
                 <h3>RONALDO</h3> 
             </div>
             <div class="tripulantes">
+                <img src="./neymar_santos_flick_60 1.png" alt="">
+                <h3>  </h3> 
                 <img src="./" alt="">
                 <h3>NEYMAR </h3> 
             </div>
             <div class="tripulantes">
+                <img src="./ZIDA 1.png" alt="">
+                <h3>  </h3> 
                 <img src="./" alt="">
                 <h3>ZIDANE </h3> 
             </div>
             <div class="tripulantes">
+                <img src="./Rectangle 3.png" alt="">
+                <h3> </h3> 
                 <img src="./" alt="">
                 <h3>VINE JR </h3> 
             </div>
             <div class="tripulantes">
+                <img src="./bruno-quase-foi-preso-em-2022-por-ficar-12-anos-sem-pagar-pensao-alimenticia_1_59651 1.png" alt="">
+                <h3> </h3> 
                 <img src="./" alt="">
                 <h3>ROMARINHO </h3> 
             </div>
