--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
      
      <section class="secao2">
           <div class="secao2-todo-tripulantes">
-            <div class="tripulantes">
                 <img src="./roe_ 1.png" alt="">
                 <h3>Nome do jogador </h3>
 =======
@@ -35,6 +34,8 @@
             <div class="tripulantes">
           <img src="./roe_ 1.png" alt="">
                 <h3>RONALDINHO </h3>
+            </div>
+            <div>
                 <img src="./download (3) 1.png" alt="">
                 <h3>CR7 </h3>
             </div>
