--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 
     <section class="secao1">
-        <div FUTEBOL>
-          <h2> class="secao1-titulo">sobre futebol</h2>
+        <div class="secao1">
+          <h2> FUTEBOL">sobre futebol</h2>
           <p class="">O futebol é o esporte mais popular do mundo e suas origens remontam há 5 mil anos na China. O futebol moderno surgiu na Inglaterra durante o século XIX. O futebol é considerado o esporte coletivo mais popular do mundo. O futebol é o esporte coletivo mais popular do planeta.</p>
         </div>
         <img class="secao1-imagem" src="./imagens (1) 1.png">
