--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="secao1">
         <div class="secao1-div">
-          <h2>class="secao-titulo">sobre futebol</h2>
+          <h2 class="secao-titulo">sobre futebol</h2>
           <p class="secao1-texto">O futebol é o esporte mais popular do mundo e suas origens remontam há 5 mil anos na China. O futebol moderno surgiu na Inglaterra durante o século XIX. O futebol é considerado o esporte coletivo mais popular do mundo. O futebol é o esporte coletivo mais popular do planeta.</p>
         </div>
         <img class="secao1-imagem" src="./imagens (1) 1.png">
