--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <img src="./download (3) 1.png" alt="">
                 <h3>CR7</h3>
             </div>
+            <div class="tripulantes">
                 <img src="./messi-ergue-a-taca-da-copa-do-mundo-1671393136267_v2_300x300 1.png" alt="">
                 <h3> MESSI </h3>
             </div>
